# test-project

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Makefile  README.md  pyproject.toml
docsrc/: conf.py  index.rst
scripts/: setup.sh  test.sh
tests/: test_math.py
