[tool.poetry]
name = "zachs-service"
version = "0.1.0"
description = "A default python project with some setup for standards"
authors = ["Zach Probst <zprobst@resilientvitality.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pytest = "^5.2"
pytest-cov = "^2.8"
pytest-sugar = "^0.9.2"
pytest-mock = "^1.11"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pre-commit = "^1.20"
bandit = "^1.6"
sphinx = "^2.2"
msmb_theme = "^1.2"
sphinx_rtd_theme = "^0.4.3"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
